--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <header>
         header
     </header>
+    <div class="slider">
+        <h1>slider on</h1>
+        <h2>slider two</h2>
+    </div>
 </body>
 </html>
