--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <h1>slider on</h1>
         <h2>slider two</h2>
     </div>
+    <footer>
+        footer
+    </footer>
 </body>
 </html>
