--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="slider">
         <h1>slider on</h1>
         <h2>slider two</h2>
+        <h1>slider three</h1>
     </div>
     <footer>
         footer
